# resolume-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/skills/advanced-output-setup/: SKILL.md
.claude/skills/deck-control-and-inspection/: SKILL.md
.claude/skills/festival-recovery-fast/: SKILL.md
.claude/skills/output-routing-festival/: SKILL.md
.claude/skills/output-warp-alignment/: SKILL.md
.claude/skills/playback-prep-and-busking/: SKILL.md
.claude/skills/show-recovery-and-triage/: SKILL.md
docs/: GETTING-STARTED.md  LIVE-VALIDATION.md  SESSION-HANDOVER.md
scripts/: live_probe.py
src/resolume_mcp/: __main__.py  advanced_output_xml.py  client.py  config.py  server.py
tests/: test_advanced_output_xml.py  test_client.py  test_config.py  test_server.py
