[project]
name = "resolume-mcp"
version = "0.1.0"
description = "Private MCP server for Resolume Arena and Avenue control"
requires-python = ">=3.12"
dependencies = [
  "mcp",
  "httpx",
  "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resolume_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
