[project]
name = "resolume-mcp"
version = "0.1.0"
description = "Private MCP server for Resolume Arena and Avenue control"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0",
  "httpx>=0.28",
  "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resolume_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
